Clases de apoyo

--- a/elementos_informatica.html
+++ b/elementos_informatica.html
@@ -11,6 +11,7 @@
         href="https://fonts.googleapis.com/css2?family=Hanken+Grotesk:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital@0;1&family=Questrial&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/clase_apoyo.css">
     <title>Elementos de Informática</title>
     <link rel="icon" href="/imagenes/logo/logo_pea.webp" type="image/png">
 </head>
@@ -111,7 +112,18 @@
 
     <!--Main-->
     <main>
-
+        <div class="imagen_clase">
+            <img src="/imagenes/clases de apoyo/elementos de informatica.jpg" alt="elementos_informatica">
+        </div>
+        <div class="descripcion_clase">
+            <p class="profe">Persona a Cargo: </p>
+            <p>Lugar: a definir</p>
+            <p>Día: Sábado</p>
+            <p>Horario: 12hs a 13:30hs</p>
+            <div class="boton">
+                <button type="submit">Inscripción</button>
+            </div>
+        </div>
     </main>
     <!--Footer-->
     <footer>
