--- a/algebra.html
+++ b/algebra.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Hanken+Grotesk:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital@0;1&family=Questrial&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="/css/algebra.css">
+    <link rel="stylesheet" href="/css/clase_apoyo.css">
     <title>Álgebra</title>
     <link rel="icon" href="/imagenes/logo/logo_pea.webp" type="image/png">
 </head>
@@ -122,7 +122,6 @@
                 <button type="submit">Inscripción</button>
             </div>
         </div>
-
     </main>
     <!--Footer-->
     <footer>
