--- a/Proyecto---PEA/index.html
+++ b/Proyecto---PEA/index.html
@@ -6,11 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Hanken+Grotesk:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital@0;1&family=Questrial&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Hanken+Grotesk:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital@0;1&family=Questrial&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="/css/index.css">
     <title>Centro de Estudiantes PEA</title>
     <link rel="icon" href="/imagenes/logo/logo_pea.webp" type="image/png">
 </head>
@@ -24,28 +21,31 @@
                         <div class="logo_pea">
                             <a href="index.html"><img src="/imagenes/logo/logo_pea.webp" alt="logo_pea"></a>
                         </div>
+                    </div>
+                    <div class="columna2">
                         <div class="barra_busqueda">
                             <input type="text" name="search" placeholder="Buscar..." autocomplete="off">
                         </div>
                     </div>
-                    <div class="columna2">
-                        <div class="logos">
-                            <div class="logo_untdf">
-                                <a href="https://www.untdf.edu.ar/"><img src="/imagenes/logo/logo_untdf_sin_letras.png" alt="logo_untdf"></a>
+                    <div class="columna3">
+                        <div></div> 
+                    </div>
+                    <div class="columna4">
+                        <div class="logo_untdf">
+                            <a href="https://www.untdf.edu.ar/"><img src="/imagenes/logo/logo_untdf_sin_letras.png" alt="logo_untdf"></a>
+                        </div>
+                        <div class="logo_siuguarani">
+                            <a href="https://autogestion.untdf.edu.ar/"><img src="/imagenes/logo/logo_siuguarani.png" alt="logo_siu"></a>
+                        </div> 
+                        <div class="fila_3">
+                            <div class="logo_ig">
+                                <a href="https://www.instagram.com/peauntdf?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="><img src="/imagenes/logo/logo_ig.png" alt="logo_ig"></a>
                             </div>
-                            <div class="logo_siuguarani">
-                                <a href="https://autogestion.untdf.edu.ar/"><img src="/imagenes/logo/logo_siuguarani.png" alt="logo_siu"></a>
-                            </div> 
-                            <div class="fila_3">
-                                <div class="logo_ig">
-                                    <a href="https://www.instagram.com/peauntdf?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="><img src="/imagenes/logo/logo_ig.png" alt="logo_ig"></a>
-                                </div>
-                                <div class="logo_mail">
-                                    <a href="#""><img src="/imagenes/logo/logo_mail.png" alt="logo_mail"></a>
-                                </div>
-                                <div class="logo_moodle">
-                                    <a href="https://moodle.untdf.edu.ar/"><img src="/imagenes/logo/logo_moodle.png" alt="logo_moodle"></a>
-                                </div>
+                            <div class="logo_mail">
+                                <a href="#""><img src="/imagenes/logo/logo_mail.png" alt="logo_mail"></a>
+                            </div>
+                            <div class="logo_moodle">
+                                <a href="https://moodle.untdf.edu.ar/"><img src="/imagenes/logo/logo_moodle.png" alt="logo_moodle"></a>
                             </div>
                         </div>
                     </div>
@@ -102,24 +102,18 @@
 
     <!--Main-->
     <main>
-        <div class="columna_1">
-            <section class="noticia">
-                <img src="/imagenes/noticia_ej.jpg" alt="noticia">
-            </section>
-        </div>
-        <div class="columna_2">
-            <section class="calendario">
-            
-            </section>
-        </div>
-        <div class="columna_3">
-            <section class="institutos">
-                <a href="https://untdf.edu.ar/institutos/icpa/informacion"><img src="/imagenes/logo/logo_icpa.png" alt="logo_icpa"></a>
-                <a href="https://untdf.edu.ar/institutos/icse/informacion"><img src="/imagenes/logo/logo_icse.png" alt="logo_icse"></a>
-                <a href="https://untdf.edu.ar/institutos/idei/informacion"><img src="/imagenes/logo/logo_idei.png" alt="logo_idei"></a>
-                <a href="https://untdf.edu.ar/institutos/IEC/informacion"><img src="/imagenes/logo/logo_iec.png" alt="logo_iec"></a>
-            </section>
-        </div>
+        <section class="noticia">
+            <img src="/imagenes/noticia_ej.jpg" alt="noticia">
+        </section>
+        <section class="calendario">
+
+        </section>
+        <section class="institutos">
+            <a href="https://untdf.edu.ar/institutos/icpa/informacion"><img src="/imagenes/logo/logo_icpa.png" alt="logo_icpa"></a>
+            <a href="https://untdf.edu.ar/institutos/icse/informacion"><img src="/imagenes/logo/logo_icse.png" alt="logo_icse"></a>
+            <a href="https://untdf.edu.ar/institutos/idei/informacion"><img src="/imagenes/logo/logo_idei.png" alt="logo_idei"></a>
+            <a href="https://untdf.edu.ar/institutos/IEC/informacion"><img src="/imagenes/logo/logo_iec.png" alt="logo_iec"></a>
+        </section>
     </main>
     <!--Footer-->
     <footer>
