--- a/clases_de_apoyo.html
+++ b/clases_de_apoyo.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,120 +9,214 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Hanken+Grotesk:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital@0;1&family=Questrial&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="/css/style.css">
+    <title>Centro de Estudiantes PEA</title>
+    <link rel="stylesheet" href="/css/comunes.css">
     <link rel="stylesheet" href="/css/clases_de_apoyo.css">
-    <title>Clases de Apoyo</title>
     <link rel="icon" href="/imagenes/logo/logo_pea.webp" type="image/png">
 </head>
-
 <body>
-    <!--Header-->
     <header>
-        <div class="contenedor">
-            <div class="barra">
-                <div class="contenedor-logo">
-                    <div class="columna1">
-                        <div class="logo_pea">
-                            <a href="index.html"><img src="/imagenes/logo/logo_pea.webp" alt="logo_pea"></a>
-                        </div>
+        <div class="columna1">
+           <div class="logo_pea">
+                <a href="index.html"><img src="/imagenes/logo/logo_pea.webp" alt="logo_pea"></a>
+            </div>
+            <div class="barra_busqueda">
+                <input type="text" name="search" placeholder="Buscar..." autocomplete="off">
+            </div>-
+        </div>
+        <div class="columna2">
+            <div class="logos">
+                <div class="logo_untdf">
+                    <a href="https://www.untdf.edu.ar/"><img src="/imagenes/logo/logo_untdf_sin_letras.png" alt="logo_untdf"></a>
+                </div>
+                <div class="logo_siuguarani">
+                    <a href="https://autogestion.untdf.edu.ar/"><img src="/imagenes/logo/logo_siuguarani.png" alt="logo_siu"></a>
+                </div> 
+                <div class="Redes">
+                    <div class="logo_ig">
+                        <a href="https://www.instagram.com/peauntdf?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="><img src="/imagenes/logo/logo_ig.png" alt="logo_ig"></a>
                     </div>
-                    <div class="columna2">
-                        <div class="barra_busqueda">
-                            <input type="text" name="search" placeholder="Buscar..." autocomplete="off">
-                        </div>
+                    <div class="logo_mail">
+                        <a href="#"><img src="/imagenes/logo/logo_mail.png" alt="logo_mail"></a>
                     </div>
-                    <div class="columna3">
-                        <div></div>
-                    </div>
-                    <div class="columna4">
-                        <div class="logo_untdf">
-                            <a href="https://www.untdf.edu.ar/"><img src="/imagenes/logo/logo_untdf_sin_letras.png"
-                                    alt="logo_untdf"></a>
-                        </div>
-                        <div class="logo_siuguarani">
-                            <a href="https://autogestion.untdf.edu.ar/"><img src="/imagenes/logo/logo_siuguarani.png"
-                                    alt="logo_siu"></a>
-                        </div>
-                        <div class="fila_3">
-                            <div class="logo_ig">
-                                <a
-                                    href="https://www.instagram.com/peauntdf?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="><img
-                                        src="/imagenes/logo/logo_ig.png" alt="logo_ig"></a>
-                            </div>
-                            <div class="logo_mail">
-                                <a href="#""><img src=" /imagenes/logo/logo_mail.png" alt="logo_mail"></a>
-                            </div>
-                            <div class="logo_moodle">
-                                <a href="https://moodle.untdf.edu.ar/"><img src="/imagenes/logo/logo_moodle.png"
-                                        alt="logo_moodle"></a>
-                            </div>
-                        </div>
+                    <div class="logo_moodle">
+                        <a href="https://moodle.untdf.edu.ar/"><img src="/imagenes/logo/logo_moodle.png" alt="logo_moodle"></a>
                     </div>
                 </div>
-                <nav class="navegacion">
-                    <ul class="menu">
-                        <li class="item quienes_somos desplegable">
-                            <a href="#">Quienes Somos</a>
-                            <ul class="submenu">
-                                <li><a href="somos.html">Somos</a></li>
-                                <li><a href="historia_pea.html">Historia PEA</a></li>
-                            </ul>
-                        </li>
-                        <li class="item estudiantes desplegable">
-                            <a href="#">Estudiantes</a>
-                            <ul class="submenu">
-                                <li><a href="clases_de_apoyo.html">Clases de Apoyo</a></li>
-                                <li><a href="videos_instructivos.html">Videos Instructivos</a></li>
-                                <li><a href="formularios.html">Formularios</a></li>
-                                <li><a href="emprendimientos.html">Emprendimientos</a></li>
-                            </ul>
-                        </li>
-                        <li class="item secretarias desplegable">
-                            <a href="#">Secretarias</a>
-                            <ul class="submenu">
-                                <li><a href="secretaria_cultura.html">Cultura</a></li>
-                                <li><a href="secretaria_deportes.html">Deporte</a></li>
-                                <li><a href="secretaria_ambiente.html">Ambiente</a></li>
-                                <li><a href="secretaria_discapacidad.html">Discapacidad y accesibilidad </a></li>
-                                <li><a href="secretaria_genero.html">Genero y disidencia</a></li>
-                            </ul>
-                        </li>
-                        <li class="item hechos desplegable">
-                            <a href="#">Hechos</a>
-                            <ul class="submenu">
-                                <li><a href="donaciones.html">Donaciones</a></li>
-                                <li><a href="hechos-clases_de_apoyo.html">Clases de apoyo</a></li>
-                                <li><a href="proyectos.html">Proyectos</a></li>
-                                <li><a href="becas.html">Becas</a></li>
-                                <li><a href="eventos.html">Eventos</a></li>
-                            </ul>
-                        </li>
-                        <li class="item apuntes">
-                            <a href="apuntes.html">Apuntes</a>
-                        </li>
-                        <li class="item noticias">
-                            <a href="noticias.html">Noticias</a>
-                        </li>
-                    </ul>
-                </nav>
             </div>
         </div>
     </header>
-    <!--Main-->
+    <nav id="navegacion">
+        <ul class="menu">
+            <li class="item quienes_somos desplegable">
+                <a href="#">Quienes Somos</a>
+                <ul class="submenu">
+                    <li><a href="#">Somos</a></li>
+                    <li><a href="#">Historia PEA</a></li>
+                </ul>
+            </li>
+            <li class="item estudiantes desplegable">
+                <a href="#">Estudiantes</a>
+                <ul class="submenu">
+                    <li><a href="clases_de_apoyo.html">Clases de Apoyo</a></li>
+                    <li><a href="videos_instructivos.html">Videos Instructivos</a></li>
+                    <li><a href="formularios.html">Formularios</a></li>
+                    <li><a href="emprendimientos.html">Emprendimientos</a></li>
+                </ul>
+            </li>
+            <li class="item secretarias desplegable">
+                <a href="#">Secretarias</a>
+                <ul class="submenu">
+                    <li><a href="#">Cultura</a></li>
+                    <li><a href="#">Deporte</a></li>
+                    <li><a href="#">Ambiente</a></li>
+                    <li><a href="#">Discapacidad y accesibilidad </a></li>
+                    <li><a href="#">Genero y disidencia</a></li>
+                </ul>
+            </li>
+            <li class="item hechos desplegable">
+                <a href="#">Hechos</a>
+                <ul class="submenu">
+                    <li><a href="#l">Donaciones</a></li>
+                    <li><a href="#">Clases de apoyo</a></li>
+                    <li><a href="#">Proyectos</a></li>
+                    <li><a href="#">Becas</a></li>
+                    <li><a href="#">Eventos</a></li>
+                </ul>
+            </li>
+            <li class="item apuntes">
+                <a href="#">Apuntes</a>
+            </li>
+            <li class="item noticias">
+                <a href="#">Noticias</a>
+            </li>
+        </ul>
+    </nav>
     <main>
+        <div class="clase clase-quimica">
+            <div class="imagen_clase">
+                <img src="/imagenes/clases de apoyo/algebra.jpg" alt="quimica">
+            </div>
+            <div class="descripcion_clase">
+                <p class="profe">Persona a Cargo: </p>
+                <p>Lugar: a definir</p>
+                <p>Día: Sábado</p>
+                <p>Horario: </p>
+                <div class="boton">
+                    <button type="submit">Inscripción</button>
+                </div>
+            </div>
+        </div>
+        <div class="clase clase-int_economia">
+            <div class="imagen_clase">
+                <img src="/imagenes/clases de apoyo/algebra.jpg" alt="quimica">
+            </div>
+            <div class="descripcion_clase">
+                <p class="profe">Persona a Cargo: </p>
+                <p>Lugar: a definir</p>
+                <p>Día: Sábado</p>
+                <p>Horario: </p>
+                <div class="boton">
+                    <button type="submit">Inscripción</button>
+                </div>
+            </div>
+        </div>
+        <div class="clase clase-algebra">
+            <div class="imagen_clase">
+                <img src="/imagenes/clases de apoyo/algebra.jpg" alt="quimica">
+            </div>
+            <div class="descripcion_clase">
+                <p class="profe">Persona a Cargo: Felix</p>
+                <p>Lugar: a definir</p>
+                <p>Día: Sábado</p>
+                <p>Horario: 10hs a 12hs</p>
+                <div class="boton">
+                    <button type="submit">Inscripción</button>
+                </div>
+            </div>
+        </div>
+        <div class="clase clase-matematica_icpa">
+            <div class="imagen_clase">
+                <img src="/imagenes/clases de apoyo/algebra.jpg" alt="quimica">
+            </div>
+            <div class="descripcion_clase">
+                <p class="profe">Persona a Cargo: </p>
+                <p>Lugar: a definir</p>
+                <p>Día: Sábado</p>
+                <p>Horario: </p>
+                <div class="boton">
+                    <button type="submit">Inscripción</button>
+                </div>
+            </div>
+        </div>
+        <div class="clase clase-matematica_contador">
+            <div class="imagen_clase">
+                <img src="/imagenes/clases de apoyo/algebra.jpg" alt="quimica">
+            </div>
+            <div class="descripcion_clase">
+                <p class="profe">Persona a Cargo: </p>
+                <p>Lugar: a definir</p>
+                <p>Día: Sábado</p>
+                <p>Horario: </p>
+                <div class="boton">
+                    <button type="submit">Inscripción</button>
+                </div>
+            </div>
+        </div>
+        <div class="clase clase-contabilidad">
+            <div class="imagen_clase">
+                <img src="/imagenes/clases de apoyo/algebra.jpg" alt="quimica">
+            </div>
+            <div class="descripcion_clase">
+                <p class="profe">Persona a Cargo: </p>
+                <p>Lugar: a definir</p>
+                <p>Día: Sábado</p>
+                <p>Horario: </p>
+                <div class="boton">
+                    <button type="submit">Inscripción</button>
+                </div>
+            </div>
+        </div>
+        <div class="clase clase-geografia_fisica">
+            <div class="imagen_clase">
+                <img src="/imagenes/clases de apoyo/algebra.jpg" alt="quimica">
+            </div>
+            <div class="descripcion_clase">
+                <p class="profe">Persona a Cargo: </p>
+                <p>Lugar: a definir</p>
+                <p>Día: Sábado</p>
+                <p>Horario: </p>
+                <div class="boton">
+                    <button type="submit">Inscripción</button>
+                </div>
+            </div>
+        </div>
+        <div class="clase clase-elementos_informatica">
+            <div class="imagen_clase">
+                <img src="/imagenes/clases de apoyo/algebra.jpg" alt="quimica">
+            </div>
+            <div class="descripcion_clase">
+                <p class="profe">Persona a Cargo: </p>
+                <p>Lugar: a definir</p>
+                <p>Día: Sábado</p>
+                <p>Horario: </p>
+                <div class="boton">
+                    <button type="submit">Inscripción</button>
+                </div>
+            </div>
+        </div>
         <div class="clases">
             <h1>Clases de Apoyo</h1>
-            <a class="clase-quimica" href="quimica.html">Química</a>
-            <a class="clase-int_economia" href="int_economia.html">Introducción a la Economía</a>
-            <a class="clase-algebra" href="algebra.html">Álgebra</a>
-            <a class="clase-matematica_icpa" href="matematica_icpa.html">Matemática 1 para el ICPA</a>
-            <a class="clase-matematica_contador" href="matematica_contador.html">Matemática 1 para Contador Público</a>
-            <a class="clase-contabilidad" href="contabilidad.html">Contabilidad 1</a>
-            <a class="clase-geografia_fisica" href="geografia_fisica.html">Geografía Física</a>
-            <a class="clase-elementos_informatica" href="elementos_informatica.html">Elementos de Informática</a>
+            <a class="clase-quimica" href="#navegacion">Química</a>
+            <a class="clase-int_economia" href="#navegacion">Introducción a la Economía</a>
+            <a class="clase-algebra" href="#navegacion">Álgebra</a>
+            <a class="clase-matematica_icpa" href="#navegacion">Matemática 1 para el ICPA</a>
+            <a class="clase-matematica_contador" href="#navegacion">Matemática 1 para Contador Público</a>
+            <a class="clase-contabilidad" href="#navegacion">Contabilidad 1</a>
+            <a class="clase-geografia_fisica" href="#navegacion">Geografía Física</a>
+            <a class="clase-elementos_informatica" href="#navegacion">Elementos de Informática</a>
         </div>
     </main>
-    <!--Footer-->
     <footer>
         <div class="logo_untdf-footer">
             <img src="/imagenes/logo/logo_untdf_simple.png" alt="logo_untdf">
@@ -133,7 +226,7 @@
             <p>Río Grande - Thorne 302</p>
             <p>Contacto - pea.untdf@gmail.com</p>
         </div>
-    
     </footer>
+    <script src="clases.js"></script>
 </body>
 </html>
