--- a/clases_de_apoyo.html
+++ b/clases_de_apoyo.html
@@ -16,83 +16,13 @@
 </head>
 <body>
     <header>
-        <div class="columna1">
-           <div class="logo_pea">
-                <a href="index.html"><img src="/imagenes/logo/logo_pea.webp" alt="logo_pea"></a>
-            </div>
-            <div class="barra_busqueda">
-                <input type="text" name="search" placeholder="Buscar..." autocomplete="off">
-            </div>-
-        </div>
-        <div class="columna2">
-            <div class="logos">
-                <div class="logo_untdf">
-                    <a href="https://www.untdf.edu.ar/"><img src="/imagenes/logo/logo_untdf_sin_letras.png" alt="logo_untdf"></a>
-                </div>
-                <div class="logo_siuguarani">
-                    <a href="https://autogestion.untdf.edu.ar/"><img src="/imagenes/logo/logo_siuguarani.png" alt="logo_siu"></a>
-                </div> 
-                <div class="Redes">
-                    <div class="logo_ig">
-                        <a href="https://www.instagram.com/peauntdf?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="><img src="/imagenes/logo/logo_ig.png" alt="logo_ig"></a>
-                    </div>
-                    <div class="logo_mail">
-                        <a href="#"><img src="/imagenes/logo/logo_mail.png" alt="logo_mail"></a>
-                    </div>
-                    <div class="logo_moodle">
-                        <a href="https://moodle.untdf.edu.ar/"><img src="/imagenes/logo/logo_moodle.png" alt="logo_moodle"></a>
-                    </div>
-                </div>
-            </div>
-        </div>
     </header>
     <nav id="navegacion">
-        <ul class="menu">
-            <li class="item quienes_somos desplegable">
-                <a href="#">Quienes Somos</a>
-                <ul class="submenu">
-                    <li><a href="#">Somos</a></li>
-                    <li><a href="#">Historia PEA</a></li>
-                </ul>
-            </li>
-            <li class="item estudiantes desplegable">
-                <a href="#">Estudiantes</a>
-                <ul class="submenu">
-                    <li><a href="clases_de_apoyo.html">Clases de Apoyo</a></li>
-                    <li><a href="videos_instructivos.html">Videos Instructivos</a></li>
-                    <li><a href="formularios.html">Formularios</a></li>
-                    <li><a href="emprendimientos.html">Emprendimientos</a></li>
-                </ul>
-            </li>
-            <li class="item secretarias desplegable">
-                <a href="#">Secretarias</a>
-                <ul class="submenu">
-                    <li><a href="#">Cultura</a></li>
-                    <li><a href="#">Deporte</a></li>
-                    <li><a href="#">Ambiente</a></li>
-                    <li><a href="#">Discapacidad y accesibilidad </a></li>
-                    <li><a href="#">Genero y disidencia</a></li>
-                </ul>
-            </li>
-            <li class="item hechos desplegable">
-                <a href="#">Hechos</a>
-                <ul class="submenu">
-                    <li><a href="#l">Donaciones</a></li>
-                    <li><a href="#">Clases de apoyo</a></li>
-                    <li><a href="#">Proyectos</a></li>
-                    <li><a href="#">Becas</a></li>
-                    <li><a href="#">Eventos</a></li>
-                </ul>
-            </li>
-            <li class="item apuntes">
-                <a href="#">Apuntes</a>
-            </li>
-            <li class="item noticias">
-                <a href="#">Noticias</a>
-            </li>
-        </ul>
     </nav>
     <main>
+        <a class="seleccionar" href="#navegacion">
+            <img src="/imagenes/clases de apoyo/Boton-seleccion.png">
+        </a>
         <div class="clase clase-quimica">
             <div class="imagen_clase">
                 <img src="/imagenes/clases de apoyo/algebra.jpg" alt="quimica">
@@ -227,6 +157,7 @@
             <p>Contacto - pea.untdf@gmail.com</p>
         </div>
     </footer>
+    <script src="header-nav.js"></script>
     <script src="clases.js"></script>
 </body>
 </html>
