--- a/index.html
+++ b/index.html
@@ -12,170 +12,26 @@
     <title>Centro de Estudiantes PEA</title>
     <link rel="stylesheet" href="/css/index.css">
     <link rel="stylesheet" href="/css/comunes.css">
-    <link rel="stylesheet" href="/css/somos.css">
     <link rel="icon" href="/imagenes/logo/logo_pea.webp" type="image/png">
 </head>
 <body>
-    <header>
-        <div class="columna1">
-           <div class="logo_pea">
-                <a href="index.html"><img src="/imagenes/logo/logo_pea.webp" alt="logo_pea"></a>
-            </div>
-            <div class="barra_busqueda">
-                <input type="text" name="search" placeholder="Buscar..." autocomplete="off">
-            </div>-
-        </div>
-        <div class="columna2">
-            <div class="logos">
-                <div class="logo_untdf">
-                    <a href="https://www.untdf.edu.ar/"><img src="/imagenes/logo/logo_untdf_sin_letras.png" alt="logo_untdf"></a>
-                </div>
-                <div class="logo_siuguarani">
-                    <a href="https://autogestion.untdf.edu.ar/"><img src="/imagenes/logo/logo_siuguarani.png" alt="logo_siu"></a>
-                </div> 
-                <div class="Redes">
-                    <div class="logo_ig">
-                        <a href="https://www.instagram.com/peauntdf?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="><img src="/imagenes/logo/logo_ig.png" alt="logo_ig"></a>
-                    </div>
-                    <div class="logo_mail">
-                        <a href="#"><img src="/imagenes/logo/logo_mail.png" alt="logo_mail"></a>
-                    </div>
-                    <div class="logo_moodle">
-                        <a href="https://moodle.untdf.edu.ar/"><img src="/imagenes/logo/logo_moodle.png" alt="logo_moodle"></a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </header>
-    <nav>
-        <ul class="menu">
-            <li class="item quienes_somos desplegable">
-                <a href="#">Quienes Somos</a>
-                <ul class="submenu">
-                    <li><a href="#" class="Boton-Somos">Somos</a></li>
-                    <li><a href="#" class="Boton-Historia">Historia PEA</a></li>
-                </ul>
-            </li>
-            <li class="item estudiantes desplegable">
-                <a href="#">Estudiantes</a>
-                <ul class="submenu">
-                    <li><a href="clases_de_apoyo.html">Clases de Apoyo</a></li>
-                    <li><a href="#">Videos Instructivos</a></li>
-                    <li><a href="#">Formularios</a></li>
-                    <li><a href="#">Emprendimientos</a></li>
-                </ul>
-            </li>
-            <li class="item secretarias desplegable">
-                <a href="#">Secretarias</a>
-                <ul class="submenu">
-                    <li><a href="#">Cultura</a></li>
-                    <li><a href="#">Deporte</a></li>
-                    <li><a href="#">Ambiente</a></li>
-                    <li><a href="#">Discapacidad y accesibilidad </a></li>
-                    <li><a href="#">Genero y disidencia</a></li>
-                </ul>
-            </li>
-            <li class="item hechos desplegable">
-                <a href="#">Hechos</a>
-                <ul class="submenu">
-                    <li><a href="#">Donaciones</a></li>
-                    <li><a href="#">Clases de apoyo</a></li>
-                    <li><a href="#">Proyectos</a></li>
-                    <li><a href="#">Becas</a></li>
-                    <li><a href="#">Eventos</a></li>
-                </ul>
-            </li>
-            <li class="item apuntes">
-                <a href="#">Apuntes</a>
-            </li>
-            <li class="item noticias">
-                <a href="#">Noticias</a>
-            </li>
-        </ul>
-    </nav>
+    <header></header>
+    <nav></nav>
     <main>
-        <!-- MAIN PRINCIPAL -->
-        <section class="index">
-            <div class="noticia">
-                <img src="/imagenes/noticia_ej.jpg" alt="noticia">
-            </div>
-            <div class="calendario">
-            </div>
-            <div class="institutos">
-                <a href="https://untdf.edu.ar/institutos/icpa/informacion"><img src="/imagenes/logo/logo_icpa.png" alt="logo_icpa"></a>
-                <a href="https://untdf.edu.ar/institutos/icse/informacion"><img src="/imagenes/logo/logo_icse.png" alt="logo_icse"></a>
-                <a href="https://untdf.edu.ar/institutos/idei/informacion"><img src="/imagenes/logo/logo_idei.png" alt="logo_idei"></a>
-                <a href="https://untdf.edu.ar/institutos/IEC/informacion"><img src="/imagenes/logo/logo_iec.png" alt="logo_iec"></a>
-            </div>
-        </section>
-        <!-- MAIN SOMOS -->
-        <section class="somos">
-            <div class="content">
-                <section class="contenido">
-                    <p>Somos una agrupación estudiantil autónoma, hecha por y para estudiantes. Nuestro principal objetivo es ayudar en las diferentes dimensiones: económica, académica, administrativa, asesoramiento y consejos de formación. Lo que nos aglutina es el bienestar estudiantil. Somos apartidarios.</p>
-                </section>
-                <section class="imagen-contenido">
-                    <img src="/imagenes/somos/pea.jpg" alt="pea">
-                </section>
-            </div>
-            <section class="miembros_pea">
-                <div class="presidenta">
-                    <img src="/imagenes/somos/miembros/mica.jpg" alt="foto_presidenta">
-                    <div class="nombre_miembro">
-                        <h2>Presidenta</h2>
-                        <p>Micaela Ledesma</p>
-                    </div>
-                </div>
-                <div class="vice_presidente">
-                    <img src="/imagenes/somos/miembros/lucho.jpg" alt="foto_vicepresidente">
-                    <div class="nombre_miembro">
-                        <h2>Vicepresidente</h2>
-                        <p>Luciano Martínez</p>
-                    </div>
-                </div>
-                <div class="tesorero">
-                    <img src="/imagenes/somos/miembros/brian.jpg" alt="foto_tesorero">
-                    <div class="nombre_miembro">
-                        <h2>Tesorero</h2>
-                        <p>Brian Lamas</p>
-                    </div>
-                </div>
-                <div class="secretario_deportes">
-                    <img src="/imagenes/somos/miembros/jose.jpg" alt="foto_secretario_deportes">
-                    <div class="nombre_miembro">
-                        <h2>Secretario de deportes</h2>
-                        <p>Jose Lemos</p>
-                    </div>
-                </div>
-                <div class="6to_vocal">
-                    <img src="/imagenes/somos/miembros/nacho.webp" alt="foto_6to_vocal">
-                    <div class="nombre_miembro">
-                        <h2>Sexto Vocal</h2>
-                        <p>Nacho</p>
-                    </div>
-                </div>
-                <div class="3ra_suplente">
-                    <img src="/imagenes/somos/miembros/cata.webp" alt="foto_3ra_suplente">
-                    <div class="nombre_miembro">
-                        <h2>Tercera Suplente</h2>
-                        <p>Catalina Calderon</p>
-                    </div>
-                </div>
-            </section>
-        </section>
-        <!-- MAIN HISTORIA PEA -->
-        <section class="historia-pea"></section>
+        <div class="noticia">
+            <img src="/imagenes/noticia_ej.jpg" alt="noticia">
+        </div>
+        <div class="calendario">
+        </div>
+        <div class="institutos">
+            <a href="https://untdf.edu.ar/institutos/icpa/informacion"><img src="/imagenes/logo/logo_icpa.png" alt="logo_icpa"></a>
+            <a href="https://untdf.edu.ar/institutos/icse/informacion"><img src="/imagenes/logo/logo_icse.png" alt="logo_icse"></a>
+            <a href="https://untdf.edu.ar/institutos/idei/informacion"><img src="/imagenes/logo/logo_idei.png" alt="logo_idei"></a>
+            <a href="https://untdf.edu.ar/institutos/IEC/informacion"><img src="/imagenes/logo/logo_iec.png" alt="logo_iec"></a>
+        </div>
     </main>
-    <footer>
-        <div class="logo_untdf-footer">
-            <img src="/imagenes/logo/logo_untdf_simple.png" alt="logo_untdf">
-        </div>
-        <div class="contenido-footer">
-            <p>Ushuaia - Yrigoyen 879 - Fuegia Basquet 251</p>
-            <p>Río Grande - Thorne 302</p>
-            <p>Contacto - pea.untdf@gmail.com</p>
-        </div>
-    </footer>
+    <footer></footer>
+    <script src="header-nav.js"></script>
     <script src="index.js"></script>
 </body>
 </html>
