Historia, Certificados, Emprendimientos, Donaciones

--- a/historia_principal.html
+++ b/historia_principal.html
@@ -12,11 +12,34 @@
     <title>Centro de Estudiantes PEA</title>
     <link rel="stylesheet" href="/css/comunes.css">
     <link rel="icon" href="/imagenes/logo/logo_pea.webp" type="image/png">
+    <link rel="stylesheet" href="/css/historia.css">
 </head>
 <body>
     <header></header>
     <nav></nav>
-    <main></main>
+    <main>
+        <div class="historia evento1">
+            <div class="descripcion">
+                <p>
+                El 14 de Marzo de 2022 un grupo de estudiantes de la
+                UNTDF se reunieron con el fin de formar una agrupación
+                por y para lxs estudiantxs, para poder brindar una mejor
+                experiencia universitaria. De esta forma nació PEA.
+                </p>
+            </div>
+            <div class="separador"></div>
+            <img src="/imagenes/noticia_ej.jpg">
+        </div>
+        <div class="historia evento2">
+            <img src="/imagenes/noticia_ej.jpg">
+            <div class="separador"></div>
+            <div class="descripcion">
+                <p>
+                    En ... de 2022 PEA ganó las elecciones.
+                </p>
+            </div>
+        </div>
+    </main>
     <footer></footer>
     <script src="header-nav.js"></script>
 </body>
