--- a/nav.html
+++ b/nav.html
@@ -11,7 +11,7 @@
         <ul class="submenu">
             <li><a href="clases_de_apoyo.html">Clases de Apoyo</a></li>
             <li><a href="videos_instructivos.html">Videos Instructivos</a></li>
-            <li><a href="formularios.html">Formularios</a></li>
+            <li><a href="certificados.html">Certificados</a></li>
             <li><a href="emprendimientos.html">Emprendimientos</a></li>
         </ul>
     </li>
@@ -28,7 +28,7 @@
     <li class="item hechos desplegable">
         <a href="#">Hechos</a>
         <ul class="submenu">
-            <li><a href="#l">Donaciones</a></li>
+            <li><a href="donaciones.html">Donaciones</a></li>
             <li><a href="#">Clases de apoyo</a></li>
             <li><a href="#">Proyectos</a></li>
             <li><a href="#">Becas</a></li>
@@ -36,7 +36,7 @@
         </ul>
     </li>
     <li class="item apuntes">
-        <a href="#">Apuntes</a>
+        <a href="apuntes.html">Apuntes</a>
     </li>
     <li class="item noticias">
         <a href="#">Noticias</a>
