Cambios en el index

--- a/clases_de_apoyo.html
+++ b/clases_de_apoyo.html
@@ -21,7 +21,7 @@
     </nav>
     <main>
         <a class="seleccionar" href="#navegacion">
-            <img src="/imagenes/clases de apoyo/Boton-seleccion.png">
+            <img src="/imagenes/clases de apoyo/flecha-atras.svg">
         </a>
         <div class="clase clase-quimica">
             <div class="imagen_clase">
