--- a/index.html
+++ b/index.html
@@ -20,17 +20,17 @@
     <main>
         <div class="noticia">
             <img src="/imagenes/noticia_ej.jpg" alt="noticia">
-        </div>
-        <div class="calendario">
-        </div>
-        <div class="institutos">
+            <button class="boton-izquierda flecha" type="button"><img src="/imagenes/clases de apoyo/flecha-atras.svg"></button>
+            <button class="boton-derecha flecha" type="button"><img src="/imagenes/clases de apoyo/flecha-atras.svg"></button>
+            <div class="overlay"></div>
+            <div class="institutos">
             <a href="https://untdf.edu.ar/institutos/icpa/informacion"><img src="/imagenes/logo/logo_icpa.png" alt="logo_icpa"></a>
             <a href="https://untdf.edu.ar/institutos/icse/informacion"><img src="/imagenes/logo/logo_icse.png" alt="logo_icse"></a>
             <a href="https://untdf.edu.ar/institutos/idei/informacion"><img src="/imagenes/logo/logo_idei.png" alt="logo_idei"></a>
             <a href="https://untdf.edu.ar/institutos/IEC/informacion"><img src="/imagenes/logo/logo_iec.png" alt="logo_iec"></a>
         </div>
+        </div>
     </main>
-    <footer></footer>
     <script src="header-nav.js"></script>
     <script src="index.js"></script>
 </body>
