--- a/header.html
+++ b/header.html
@@ -1,29 +1,16 @@
-<div class="columna1">
-    <div class="logo_pea">
-        <a href="index.html"><img src="/imagenes/logo/logo_pea.webp" alt="logo_pea"></a>
+<div id="links">
+    <div id="logo_untdf">
+        <a><img src="imagenes/logo/logo_untdf_sin_letras.png"></a>
     </div>
-    <div class="barra_busqueda">
-        <input type="text" name="search" placeholder="Buscar..." autocomplete="off">
+    <div id="logo_pea">
+        <div id="borde">
+            <a><img src="imagenes/logo/logo_pea.webp"></a>
+        </div>
     </div>
-</div>
-<div class="columna2">
-    <div class="logos">
-        <div class="logo_untdf">
-            <a href="https://www.untdf.edu.ar/"><img src="/imagenes/logo/logo_untdf_sin_letras.png" alt="logo_untdf"></a>
-        </div>
-        <div class="logo_siuguarani">
-            <a href="https://autogestion.untdf.edu.ar/"><img src="/imagenes/logo/logo_siuguarani.png" alt="logo_siu"></a>
-        </div> 
-        <div class="Redes">
-            <div class="logo_ig">
-                <a href="https://www.instagram.com/peauntdf?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="><img src="/imagenes/logo/logo_ig.png" alt="logo_ig"></a>
-            </div>
-            <div class="logo_mail">
-                <a href="#"><img src="/imagenes/logo/logo_mail.png" alt="logo_mail"></a>
-            </div>
-            <div class="logo_moodle">
-                <a href="https://moodle.untdf.edu.ar/"><img src="/imagenes/logo/logo_moodle.png" alt="logo_moodle"></a>
-            </div>
-        </div>
+    <div id="iconos">
+        <a><img src="imagenes/logo/logo_siuguarani.png"></a>
+        <a><img src="imagenes/logo/logo_mail.png"></a>
+        <a><img src="imagenes/logo/logo_ig.png"></img></a>
+        <a><img src="imagenes/logo/logo_moodle.png"></a>
     </div>
 </div>
